fix: text alignment for mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -491,6 +491,7 @@ hr {
   }
   .sections h3 {
     font-size: 1.9rem;
+    text-align: center;
   }
   p{
     font-size: 1.3rem;
